--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         }
       }
 
-      document.getElementById("submit-guesses").addEventListener("click", checkGuesses);
+      document.getElementById("submit-run-guesses").addEventListener("click", checkGuesses);
 
       document.getElementById("reveal-answers").addEventListener("click", function() {
         document.getElementById("run-answer").innerHTML = topRunScorer;
