--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
       }
 
       document.getElementById("submit-run-guesses").addEventListener("click", checkGuesses);
+      document.getElementById("submit-wicket-guesses").addEventListener("click", checkGuesses);
 
       document.getElementById("reveal-answers").addEventListener("click", function() {
         document.getElementById("run-answer").innerHTML = topRunScorer;
