--- a/index.html
+++ b/index.html
@@ -1,186 +1,163 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Crickdle</title>
-    <style>
-      body {
-        font-family: 'Roboto', sans-serif;
-        color: #2d2d2d;
-        background-color: #f7f7f7;
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Crickdle</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: #f9f9f9;
+    }
+
+    .container {
+      max-width: 600px;
+      margin: 0 auto;
+      padding: 20px;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 36px;
+      font-weight: bold;
+      margin: 0;
+    }
+
+    p {
+      font-size: 18px;
+      margin: 0;
+      margin-top: 20px;
+    }
+
+    .form-group {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      margin-top: 20px;
+    }
+
+    .form-group label {
+      font-size: 18px;
+      font-weight: bold;
+      margin-right: 10px;
+    }
+
+    .form-group input {
+      padding: 10px;
+      border: 1px solid #ccc;
+      font-size: 16px;
+      flex: 1;
+      margin-right: 10px;
+    }
+
+    .form-group input.correct {
+      border-color: #5cb85c;
+      background-color: #dff0d8;
+    }
+
+    .form-group input.incorrect {
+      border-color: #d9534f;
+      background-color: #f2dede;
+    }
+
+    .form-group input.answer {
+      background-color: white;
+      font-weight: bold;
+      font-size: 16px;
+      color: #333;
+      border: none;
+      text-align: center;
+    }
+
+    .button-container {
+      margin-top: 20px;
+    }
+
+    .button-container button {
+      padding: 10px 20px;
+      background-color: #337ab7;
+      color: #fff;
+      border: none;
+      font-size: 18px;
+      cursor: pointer;
+    }
+
+    .button-container button:hover {
+      background-color: #286090;
+    }
+
+    .game-over {
+      font-size: 24px;
+      font-weight: bold;
+      margin-top: 20px;
+      color: #d9534f;
+    }
+
+    .correct-answers {
+      margin-top: 20px;
+      font-weight: bold;
+      font-size: 16px;
+      color: #333;
+    }
+
+    .correct-answers span {
+      margin-right: 10px;
+    }
+
+    .correct-answer-text {
+      font-style: italic;
+    }
+</script>
+</head>
+<body>
+	<div id="game-info">
+		<h2>Match Info:</h2>
+		<p>Nations: <span id="nations"></span></p>
+		<p>Date: <span id="date"></span></p>
+		<p>Score: <span id="score"></span></p>
+		<p>Game Number: <span id="game-number"></span></p>
+	</div>
+	<div id="guesses">
+		<h2>Guess the Top Run Scorer:</h2>
+		<input type="text" id="run-scorer" maxlength="20">
+		<h2>Guess the Top Wicket Taker:</h2>
+		<input type="text" id="wicket-taker" maxlength="20">
+	</div>
+  <script>
+    const correctRunScorer = "Virat Kohli";
+    const correctWicketTaker = "James Anderson";
+    let guessesLeft = 4;
+    
+    const runScorerInput = document.getElementById("run-scorer-input");
+    const wicketTakerInput = document.getElementById("wicket-taker-input");
+    const submitButton = document.getElementById("submit-button");
+
+    submitButton.addEventListener("click", function() {
+      const userRunScorer = runScorerInput.value;
+      const userWicketTaker = wicketTakerInput.value;
+
+      if (userRunScorer.toLowerCase() === correctRunScorer.toLowerCase()) {
+        runScorerInput.style.backgroundColor = "green";
+      } else {
+        runScorerInput.style.backgroundColor = "red";
+        guessesLeft--;
+      }
+      if (userWicketTaker.toLowerCase() === correctWicketTaker.toLowerCase()) {
+        wicketTakerInput.style.backgroundColor = "green";
+      } else {
+        wicketTakerInput.style.backgroundColor = "red";
+        guessesLeft--;
       }
 
-      .container {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
+      if (guessesLeft === 0) {
+        runScorerInput.value = correctRunScorer;
+        wicketTakerInput.value = correctWicketTaker;
+        runScorerInput.style.backgroundColor = "white";
+        wicketTakerInput.style.backgroundColor = "white";
+        submitButton.disabled = true;
       }
-
-      h1 {
-        font-size: 36px;
-        font-weight: 700;
-        margin-bottom: 20px;
-        text-align: center;
-      }
-
-      h2 {
-        font-size: 24px;
-        font-weight: 500;
-        margin-top: 50px;
-        margin-bottom: 20px;
-      }
-
-      p {
-        font-size: 18px;
-        font-weight: 400;
-        margin: 10px 0;
-        text-align: center;
-      }
-
-      input[type="text"], input[type="submit"], button {
-        padding: 10px 20px;
-        font-size: 18px;
-        font-weight: 500;
-        border-radius: 30px;
-        border: none;
-        margin: 10px 0;
-        background-color: #d8d8d8;
-        color: #2d2d2d;
-        cursor: pointer;
-        transition: all 0.2s ease-in-out;
-      }
-
-      input[type="text"]:hover, input[type="submit"]:hover, button:hover {
-        background-color: #2d2d2d;
-        color: #ffffff;
-      }
-
-      #run-guess-result, #wicket-guess-result {
-        font-size: 18px;
-        font-weight: 500;
-        margin: 10px 0;
-        text-align: center;
-      }
-
-      #reveal-answers, #run-answer, #wicket-answer {
-        font-size: 18px;
-        font-weight: 500;
-        margin: 10px 0;
-        text-align: center;
-        display: none;
-      }
-
-      #reveal-answers {
-        background-color: #2d2d2d;
-        color: #ffffff;
-      }
-
-      #attempts-remaining {
-        font-size: 18px;
-        font-weight: 500;
-        margin: 10px 0;
-        text-align: center;
-      }
-
-      #match-nations, #match-date, #match-score, #match-series {
-        font-size: 18px;
-        font-weight: 400;
-        margin: 10px 0;
-        text-align: center;
-      }
-
-      #top-run-score, #top-wicket-figures {
-        font-size: 18px;
-        font-weight: 400;
-        margin: 10px 0;
-        text-align: center;
-    </style>
-  </head>
-  <body>
-    <h1>Guess the top run scorer and top wicket taker in this Test cricket match:</h1>
-    <p>Nations: <span id="match-nations"></span></p>
-    <p>Date: <span id="match-date"></span></p>
-    <p>Score: <span id="match-score"></span></p>
-    <p>Game number: <span id="match-series"></span></p>
-    <h2>Top Run Scorer</h2>
-    <p>Top score: <span id="top-run-score"></span></p>
-    <form id="run-guess-form">
-      <input type="text" id="run-guess" name="run-guess" placeholder="Enter name here">
-      <input type="submit" id="submit-run-guesses" value="Submit">
-      <div id="run-guess-result"></div>
-    </form>
-    <h2>Top Wicket Taker</h2>
-    <p>Best bowling figures: <span id="top-wicket-figures"></span></p>
-    <form id="wicket-guess-form">
-      <input type="text" id="wicket-guess" name="wicket-guess" placeholder="Enter name here">
-      <input type="submit" id="submit-wicket-guesses" value="Submit">
-      <div id="wicket-guess-result"></div>
-    </form>
-    <p>Attempts remaining: <span id="attempts-remaining">4</span></p>
-    <p>Answers:</p>
-    <p>Top run scorer: <span id="run-answer"></span></p>
-    <p>Top wicket taker: <span id="wicket-answer"></span></p>
-
-    <script>
-      var matchNations = "England vs India";
-      var matchDate = "1st January 2022";
-      var matchScore = "England 300/5 (80) - India 200 all out (60)";
-      var matchSeries = "Test Series, Match 3 of 5";
-
-      var topRunScorer = "Joe Root";
-      var topRunScore = 150;
-      var topWicketTaker = "James Anderson";
-      var topWicketFigures = 5;
-
-      var runGuess = "";
-      var wicketGuess = "";
-      var attemptsRemaining = 4;
-
-      document.getElementById("match-nations").innerHTML = matchNations;
-      document.getElementById("match-date").innerHTML = matchDate;
-      document.getElementById("match-score").innerHTML = matchScore;
-      document.getElementById("match-series").innerHTML = matchSeries;
-      document.getElementById("top-run-score").innerHTML = topRunScore;
-      document.getElementById("top-wicket-figures").innerHTML = topWicketFigures;
-
-      function checkGuesses() {
-         event.preventDefault();
-        runGuess = document.getElementById("run-guess").value;
-        wicketGuess = document.getElementById("wicket-guess").value;
-
-        if (runGuess.toLowerCase() === topRunScorer.toLowerCase()) {
-          document.getElementById("run-guess-result").style.color = "green";
-          document.getElementById("run-guess-result").innerHTML = "Correct!";
-        } else {
-          document.getElementById("run-guess-result").style.color = "red";
-          document.getElementById("run-guess-result").innerHTML = "Incorrect";
-        }
-
-        if (wicketGuess.toLowerCase() === topWicketTaker.toLowerCase()) {
-          document.getElementById("wicket-guess-result").style.color = "green";
-          document.getElementById("wicket-guess-result").innerHTML = "Correct!";
-        } else {
-          document.getElementById("wicket-guess-result").style.color = "red";
-          document.getElementById("wicket-guess-result").innerHTML = "Incorrect";
-        }
-
-        attemptsRemaining--;
-
-        document.getElementById("attempts-remaining").innerHTML = attemptsRemaining;
-
-        if (attemptsRemaining === 0) {
-          document.getElementById("run-guess").disabled = true;
-          document.getElementById("wicket-guess").disabled = true;
-          document.getElementById("run-answer").innerHTML = topRunScorer;
-          document.getElementById("wicket-answer").innerHTML = topWicketTaker;
-          
-        }
-      }
-
-      document.getElementById("submit-run-guesses").addEventListener("click", checkGuesses);
-      document.getElementById("submit-wicket-guesses").addEventListener("click", checkGuesses);
-      });
-    </script>
-  </body>
+    });
+  </script>
+</body>
 </html>
