--- a/index.html
+++ b/index.html
@@ -108,6 +108,16 @@
 			.correct-answer-text {
 				font-style: italic;
 			}
+			
+			html, body {
+				height: 100%;
+			}
+
+			body {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+			}
 		</style>
 	</head>
 	<body>
