--- a/index.html
+++ b/index.html
@@ -2,6 +2,88 @@
 <html>
   <head>
     <title>Crickdle - Guess the Cricket Player</title>
+	  <style>
+		html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: Arial, sans-serif;
+  background-color: #f7f7f7;
+}
+
+h2 {
+  font-size: 1.2em;
+  margin-top: 0;
+}
+
+#match-details {
+  margin-bottom: 2em;
+}
+
+#guess-section {
+  border: 1px solid #ccc;
+  padding: 1em;
+  background-color: white;
+  text-align: center;
+  max-width: 500px;
+}
+
+.guess-input {
+  margin: 1em 0;
+}
+
+label {
+  display: block;
+  margin-bottom: 0.5em;
+  font-weight: bold;
+}
+
+input[type="text"] {
+  padding: 0.5em;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  width: 200px;
+  font-size: 1em;
+}
+
+button {
+  padding: 0.5em;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 3px;
+  margin-left: 1em;
+  cursor: pointer;
+  font-size: 1em;
+}
+
+button:disabled {
+  background-color: #ccc;
+  cursor: default;
+}
+
+#congratulations, #answer {
+  margin: 1em 0;
+}
+
+#congratulations p {
+  color: green;
+}
+
+#answer p {
+  color: red;
+}
+
+#how-to-play {
+  margin-top: 2em;
+}
+	  </style>  
   </head>
   <body>
     <div id="match-details">
