--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@ body {
   <body>
     <div id="match-details">
       <h2>CRICKDLE</h2>
-      <p><strong></strong> <span id="nation1"></span> vs <span id="nation2"></span></p>
-      <p><strong></strong> <span id="date"></span></p>
-      <p><strong></strong> <span id="score"></span></p>
-      <p><strong></strong> <span id="game-number"></span> of <span id="total-games"></span></p>
+      <p><strong>i</strong> <span id="nation1"></span> vs <span id="nation2"></span></p>
+      <p><strong>i</strong> <span id="date"></span></p>
+      <p><strong>i</strong> <span id="score"></span></p>
+      <p><strong>i</strong> <span id="game-number"></span> of <span id="total-games"></span></p>
     </div>
     <div id="guess-section">
       <h2>Guess the Cricket Player:</h2>
-      <p>Which player scored 23 and 89* in this game?. You have four guesses.</p>
+      <p>Which player scored 23 and 89* in this game? You have four guesses.</p>
       <div class="guess-input">
         <label for="guess1">Guess 1:</label>
         <input type="text" id="guess1" />
@@ -180,7 +180,7 @@ const gameDetails = {
   nation2: "India",
   date: "January 15 - 19, 2021",
   score: "Australia 369 & 294, India (T: 328) 336 & 329/7",
-  gameNumber: Test match 4,
+  gameNumber: 4,
   totalGames: 4
 };
 
