--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@ body {
   </head>
   <body>
     <div id="match-details">
-      <strong>CRICKDLE</strong>
-      <b><span id="nation1"></span> vs <span id="nation2"></span></b>
-      <b><span id="date"></span></b>
-      <b><span id="score"></span></b>
-      <b>Test match <span id="game-number"></span> of <span id="total-games"></span></b>
+	    <p><strong>CRICKDLE</strong></p>
+	    <p><b><span id="nation1"></span> vs <span id="nation2"></span></b></p>
+	    <p><b><span id="date"></span></b></p>
+	    <p><b><span id="score"></span></b></p>
+	    <p><b>Test match <span id="game-number"></span> of <span id="total-games"></span></b></p>
     </div>
     <div id="guess-section">
-      <h2>Which player scored 23 and 89* in this game?</h2>
+      <h2>Which &#127470;&#127475; player scored 23 and 89* in this game?</h2>
       <div class="guess-input">
         <label for="guess1">Guess 1:</label>
         <input type="text" id="guess1" />
@@ -174,8 +174,8 @@ body {
 	  <script>
 		  // Define game details and correct player (can be set manually)
 const gameDetails = {
-  nation1: "Australia",
-  nation2: "India",
+  nation1: "Australia &#127462;&#127482;",
+  nation2: "India &#127470;&#127475;",
   date: "January 15 - 19, 2021",
   score: "Australia 369 & 294, India (T: 328) 336 & 329/7",
   gameNumber: 4,
