--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@ body {
   </head>
   <body>
     <div id="match-details">
-	    <p><strong>CRICKDLE</strong></p>
+	    <p><h2>CRICKDLE</strong></h2>
 	    <p><b><span id="nation1"></span> vs <span id="nation2"></span></b></p>
 	    <p><b><span id="date"></span></b></p>
 	    <p><b><span id="score"></span></b></p>
 	    <p><b>Test match <span id="game-number"></span> of <span id="total-games"></span></b></p>
     </div>
     <div id="guess-section">
-      <h2>Which &#127470;&#127475; player scored 23 and 89* in this game?</h2>
+      <strong>Which &#127470;&#127475; player scored 23 and 89* in this game?</strong>
       <div class="guess-input">
         <label for="guess1">Guess 1:</label>
         <input type="text" id="guess1" />
@@ -169,13 +169,13 @@ body {
       </div>
     </div>
     <div id="how-to-play">
-	    <p><b>How to play:</b>Guess the name of the player based on their stats in this match. You have four guesses. The background of the input box will turn green if you guess the correct player, and grey if you guess incorrectly. If you make four incorrect guesses, the correct answer will be revealed.</p>
+	    <p><b>How to play:</b> Guess the name of the player based on their stats in this match. You have four guesses. The background of the input box will turn green if you guess the correct player, and grey if you guess incorrectly. If you make four incorrect guesses, the correct answer will be revealed.</p>
     </div>
 	  <script>
 		  // Define game details and correct player (can be set manually)
 const gameDetails = {
-  nation1: "Australia &#127462;&#127482;",
-  nation2: "India &#127470;&#127475;",
+  nation1: "Australia;",
+  nation2: "India;",
   date: "January 15 - 19, 2021",
   score: "Australia 369 & 294, India (T: 328) 336 & 329/7",
   gameNumber: 4,
