--- a/index.html
+++ b/index.html
@@ -142,22 +142,18 @@ body {
     <div id="guess-section">
       <strong>Which &#127470;&#127475; player scored 23 and 89* in this game?</strong>
       <div class="guess-input">
-        <label for="guess1">Guess 1:</label>
         <input type="text" id="guess1" />
         <button id="submit1">Submit</button>
       </div>
       <div class="guess-input">
-        <label for="guess2">Guess 2:</label>
         <input type="text" id="guess2" disabled />
         <button id="submit2" disabled>Submit</button>
       </div>
       <div class="guess-input">
-        <label for="guess3">Guess 3:</label>
         <input type="text" id="guess3" disabled />
         <button id="submit3" disabled>Submit</button>
       </div>
       <div class="guess-input">
-        <label for="guess4">Guess 4:</label>
         <input type="text" id="guess4" disabled />
         <button id="submit4" disabled>Submit</button>
       </div>
@@ -174,8 +170,8 @@ body {
 	  <script>
 		  // Define game details and correct player (can be set manually)
 const gameDetails = {
-  nation1: "Australia;",
-  nation2: "India;",
+  nation1: "Australia",
+  nation2: "India",
   date: "January 15 - 19, 2021",
   score: "Australia 369 & 294, India (T: 328) 336 & 329/7",
   gameNumber: 4,
