--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body {
 /* Center the game container */
 #game-container {
   margin: auto;
-  max-width: 400px;
+  max-width: 800px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -121,19 +121,14 @@ body {
   text-align: center;
 }
 
-#how-to-play h2 {
-  margin-top: 0;
-  margin-bottom: 1em;
-}
-
 #how-to-play p {
-  margin-bottom: 1em;
+  margin-bottom: 2em;
 }
 	  </style>
   </head>
   <body>
     <div id="match-details">
-	    <p><h2>CRICKDLE</strong></h2>
+	    <p><h2>CRICKDLE</h2>
 	    <p><b><span id="nation1"></span> vs <span id="nation2"></span></b></p>
 	    <p><b><span id="date"></span></b></p>
 	    <p><b><span id="score"></span></b></p>
