--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@ p {
   <body>
     <div id="match-details">
 	    <p><h2>CRICKDLE</h2>
-	    <p><b><span id="nation1"></span> vs <span id="nation2"></span></b></p>
-	    <p><b><span id="date"></span></b></p>
-	    <p><b><span id="score"></span></b></p>
-	    <p><b>Test match <span id="game-number"></span> of <span id="total-games"></span></b></p>
+	    <p><span id="nation1"></span> vs <span id="nation2"></span></p>
+	    <p><span id="date"></span></p>
+	    <p><span id="score"></span></p>
+	    <p>Test match <span id="game-number"></span> of <span id="total-games"></span></p>
     </div>
     <div id="guess-section">
       <strong>Which &#127470;&#127475; player scored 23 and 89* in this game?</strong>
