--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ const gameDetails = {
   totalGames: 4
 };
 
-const correctPlayer = ["Rishabh Pant", "Rishabh", "Pant"];
+const correctPlayer = ["Pant"];
 
 // Set up event listeners
 const guessInputs = document.querySelectorAll(".guess-input");
